k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kompose\kompose.exe convert -f compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Program Files\Kompose\kompose.exe convert -f compose.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/aspnet-mssql-infrastructure-default: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: ACCEPT_EULA
              value: "Y"
            - name: SA_PASSWORD
              value: example_123
          image: mcr.microsoft.com/azure-sql-edge:1.0.4
          livenessProbe:
            exec:
              command:
                - /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P example_123 -Q 'SELECT 1' || exit 1
            failureThreshold: 10
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
          name: db
          resources: {}
      restartPolicy: Always
status: {}
